--- a/TODO.org
+++ b/TODO.org
@@ -6,13 +6,13 @@ Global TODO list
 * TODO Merge layout into main
 ** TODO Feature parity w/ old version
 *** TODO mouse functions
-**** TODO mute and solo
-**** TODO select track in
-**** TODO set playhead pos
+**** DONE mute and solo
+**** DONE select track in
+**** DONE set playhead pos
 **** TODO grab clips
 +**** TODO drag clips+
-**** TODO rename track
-**** TODO vol and pan ((NOT PARITY))
+**** DONE rename track
+**** DONE vol and pan ((NOT PARITY))
 *** DONE Select Out
 *** DONE Show output wavs
 *** DONE Draw ruler
