--- a/TODO.org
+++ b/TODO.org
@@ -1,10 +1,11 @@
 Global TODO list
 
 * Bugs
-** TODO Realignment of TL on 'n' and 'p' fails after window size changes
+** DONE Realignment of TL on 'n' and 'p' fails after window size changes
 ** TODO Text edit bounds checking (pass max len at set time)
+** TODO put appearance/disappearance of textboxes on the main thread
 * TODO Merge layout into main
-** TODO Feature parity w/ old version
+** DONE Feature parity w/ old version
 *** DONE mouse functions
 **** DONE mute and solo
 **** DONE select track in
@@ -22,6 +23,7 @@ Global TODO list
 +*** TODO Copy clip (?)+
 *** DONE track delete (primitive)
 *** DONE clipref delete (primitive)
+*** DONE query audio devices
 ** TODO Presentability
 *** TODO update readme
 *** TODO generate keybd shortcut ref
@@ -30,8 +32,8 @@ Global TODO list
 ** TODO Version branches
 * TODO adjust clipref bounds
 * DONE Pd bridge
-+** TODO Pd input+
-** DONE Pd output
+** DONE Pd input
++** TODO Pd output+
 + adding track-level output and real-time input would allow audio effects to be exported to Pd
 * TODO Timeline ref
 + Parallel to clipref
